# cellular-automaton

./: .ccls  .clang-format  .clang-tidy  .gitignore  .travis.yml  Automaton.cpp  Automaton.hpp  CMakeLists.txt  Graphics.cpp  Graphics.hpp  LApp.cpp  LApp.hpp  LEvent.cpp  LICENSE  Life.cpp  Life.hpp  LifeTest.cpp  Makefile  README  README.md  Set.cpp  Set.hpp  Shader.cpp  Shader.hpp  ShaderBlur.hpp  automaton.cpp  automaton.hpp  base.hpp  bloom_f.glsl  bloom_v.glsl  event.cpp  graphics.cpp  graphics.hpp  life.cpp  life.hpp  main.cpp  matrix.hpp  matrixtest.cpp  parser.cpp  parser.hpp  (+7 more)
include/: automaton.hpp  graphics.hpp  life.hpp  matrix.hpp  parser.hpp  set.hpp  state.hpp
src/: automaton.cpp  event.cpp  graphics.cpp  life.cpp  main.cpp  parser.cpp  parsertest.cpp  shader.cpp  state_field.cpp
